--- a/app/src/main/res/layout/activity_bluetooth_detail_info.xml
+++ b/app/src/main/res/layout/activity_bluetooth_detail_info.xml
@@ -16,6 +16,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:gravity="center_vertical"
+            android:visibility="gone"
             android:text="@string/command" />
 
 
@@ -24,12 +25,14 @@
             android:layout_width="140dp"
             android:layout_height="match_parent"
             android:layout_toEndOf="@+id/tvTip"
+            android:visibility="gone"
             android:gravity="center_vertical"
             android:hint="@string/command_tip" />
 
         <Button
             android:id="@+id/btnSendCommand"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:layout_height="match_parent"
             android:layout_toRightOf="@+id/etCommand"
             android:text="@string/send_command" />
@@ -38,7 +41,7 @@
             android:id="@+id/tvCommandInstruction"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:gravity="center"
             android:text="@string/command_instruction" />
     </RelativeLayout>
