--- a/app/src/main/res/layout/activity_bluetooth_detail_info.xml
+++ b/app/src/main/res/layout/activity_bluetooth_detail_info.xml
@@ -16,8 +16,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:gravity="center_vertical"
-            android:visibility="gone"
-            android:text="@string/command" />
+            android:text="@string/command"
+            android:visibility="gone" />
 
 
         <EditText
@@ -25,17 +25,25 @@
             android:layout_width="140dp"
             android:layout_height="match_parent"
             android:layout_toEndOf="@+id/tvTip"
-            android:visibility="gone"
             android:gravity="center_vertical"
-            android:hint="@string/command_tip" />
+            android:hint="@string/command_tip"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btnSendCommand"
             android:layout_width="wrap_content"
-            android:visibility="gone"
             android:layout_height="match_parent"
             android:layout_toRightOf="@+id/etCommand"
-            android:text="@string/send_command" />
+            android:text="@string/send_command"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvPercentage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:gravity="center_vertical"
+            android:text="ota percentage if exist" />
 
         <TextView
             android:id="@+id/tvCommandInstruction"
