voltage version test

--- a/app/src/main/res/layout/activity_bluetooth_detail_info.xml
+++ b/app/src/main/res/layout/activity_bluetooth_detail_info.xml
@@ -76,7 +76,8 @@
         android:id="@+id/layoutOtaTip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:visibility="gone">
 
         <ProgressBar
             android:id="@+id/progressbarOta"
